# solopreneur-

./: $null  .gitignore  COPILOT_DISTINCTION_GUIDE.md  Dockerfile  LOCAL_MODEL_OPTIMIZATION.md  MEDIUM_RISK_FIXES.md  OPTIMIZATION_SUMMARY.md  PROVIDER_GUIDE.md  PROVIDER_INTEGRATION_GUIDE.md  README.md  README_new.md  SECURITY_AUDIT_REPORT.md  TEST_GUIDE.md  build.gradle  config.example.json  diagnose_provider.py  pyproject.toml  settings.gradle  spec-template.md  start.py  test_llm_connection.py  test_provider_config.py  test_qwen3.py
.agent/: feature_list.json  progress.md
.agents/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
.compaction/: tool_1_delegate_auto_1771081420.txt  tool_1_run_workflow_1771057692.txt
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.nanobot/: config.json
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
agents/: assistant.yaml  developer.yaml  initializer.yaml  legal_advisor.yaml  product_manager.yaml  release_manager.yaml  security_engineer.yaml  sre_engineer.yaml  tester.yaml
docs/: AGENT_CATALOG.md  ARCHITECTURE.md  COMMUNICATION.md  LONG_RUNNING_AGENT_REFACTOR.md  MEDIUM_RISK_FIXES.md  MEMORY_SYSTEM.md  OPTIMIZATION_SUMMARY.md  PERSISTENCE_P0_CHECKLIST.md  PERSISTENCE_PHASE_PROGRESS.md  PROVIDER_GUIDE.md  SDLC_AGENT_SKILL_ROADMAP.md  SKILLS_AND_CONFIG.md  SKILL_CATALOG.md  SUBAGENT_SYSTEM.md  TEST_GUIDE.md  TOKEN_CONTROL_GUIDE.md  TOKEN_POOL_GUIDE.md  WECOM_TUNNEL_GUIDE.md  api-spec.md  data.json  development-guide.md  effc.md  index.md  providers_quickstart.md
memory/: constitution.md
nanobot/: __main__.py
nanobot/agent/: __init__.py  compaction.py  context.py  loop.py  memory.py  skills.py  subagent.py
nanobot/agents/: __init__.py  definition.py  loader.py  manager.py  registry.py
nanobot/api/: main.py  websocket.py
nanobot/channels/: manager.py  wecom.py  wecom_channel.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  logging.py  schema.py
nanobot/core/: dependencies.py
nanobot/projects/: __init__.py  manager.py  models.py
nanobot/providers/: base.py  exceptions.py  factory.py  github_copilot.py  litellm_provider.py  token_pool.py
scripts/: init.sh  migrate_legacy_files_to_sqlite.py  p0_core_regression.py  smoke_test.py  test_api_direct.py  test_api_endpoints.py
solopreneur/: __init__.py  __main__.py
tests/: quick_test.py  test_auth_boundary.py  test_concurrent_register.py  test_copilot_429.py  test_docker.sh  test_memory_engine.py  test_permission.py  test_provider_config.py  test_qwen3.py  test_tool_validation.py
ui/: .gitignore  .npmrc  MVP_TEST.md  QUICKSTART.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1770998146249-0f6d46427c84.mjs
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
workspace/: AGENTS.md
(+270 files in other folders)
