[project]
name = "solopreneur-ai"
version = "0.1.3.post4"
description = "A lightweight personal AI assistant framework for solopreneurs"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "solopreneur contributors"}
]
keywords = ["ai", "agent", "chatbot", "solopreneur", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "wsproto>=1.2.0",
    "pycryptodome>=3.20.0",
    "cryptography>=42.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
solopreneur = "solopreneur.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solopreneur"]

[tool.hatch.build.targets.wheel.sources]
"solopreneur" = "solopreneur"

# Include non-Python files in skills and agent presets
[tool.hatch.build]
include = [
    "solopreneur/**/*.py",
    "solopreneur/**/*.yaml",
    "solopreneur/**/*.yml",
    "solopreneur/skills/**/*.md",
    "solopreneur/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "solopreneur/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
